# agents-api

./: .env.example  .gitignore  Dockerfile  compose.yaml  initialize_project.sh  requirements.txt
app/: main.py  pyproject.toml
app/api/v1/routers/: agent.py  component.py  consultant.py  document.py  file.py
app/core/: config.py  conversion.py  email.py  storage copy.py  storage.py
app/core/authentication/: auth_token.py
app/schemas/: agent.py  base.py  component.py  consultant.py  document.py  file.py  page.py  review.py  token.py
